--- a/MyProject/src/scss/login.css
+++ b/MyProject/src/scss/login.css
@@ -41,6 +41,7 @@ body {
 .main__gg {
   background-color: #DD4B39;
   border-radius: 0.2rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   display: flex;
   position: relative;
 }
@@ -61,13 +62,15 @@ body {
   left: 0;
   transform: translateY(-50%);
   padding: 0.8rem;
-  border-right: 0.5px solid #475F7B;
+  border-right: 0.5px solid rgba(0, 0, 0, 0.35);
 }
 .main__gg-link > span {
   padding-left: 0.5rem;
 }
 .main__label {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+  margin-left: 1.75rem;
+  display: inline-block;
 }
 .main__input {
   font-size: 0.9rem;
@@ -78,7 +81,7 @@ body {
   background-color: #5A8DEE;
   color: #fff;
   border-radius: 0.2rem;
-  box-shadow: 0 2px 4px 0 rgba(90, 141, 238, 0.5);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   display: inline-block;
   transition: all 0.2s ease-in-out;
 }
@@ -94,7 +97,7 @@ body {
   transform: translateY(-50%);
 }
 .main__signup {
-  border-top: 0.2px solid #6c757d;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 .main__right {
   background-color: #F2F4F4;
@@ -104,6 +107,85 @@ body {
   align-items: center;
   border-bottom-right-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
+}
+
+.borderInput {
+  border: 1px solid #007bff;
+  color: #007bff !important;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.paddingLabelIn {
+  animation-name: labelIn;
+  animation-duration: 0.5s;
+  margin-left: 0.2rem;
+}
+
+.paddingLabelOut {
+  animation-name: labelOut;
+  animation-duration: 0.5s;
+  margin-left: 1.75rem;
+}
+
+.paddingTextInputIn {
+  animation-name: textInputIn;
+  animation-duration: 0.2s;
+  padding-left: 1.25rem;
+}
+
+.paddingTextInputOut {
+  animation-name: textInputIOut;
+  animation-duration: 0.2s;
+  padding-left: 0.75rem;
+}
+
+@keyframes textInputIn {
+  0% {
+    padding-left: 0.75rem;
+  }
+  100% {
+    padding-left: 1.25rem;
+  }
+}
+@keyframes textInputIOut {
+  0% {
+    padding-left: 1.25rem;
+  }
+  100% {
+    padding-left: 0.75rem;
+  }
+}
+@keyframes labelIn {
+  0% {
+    margin-left: 1.75rem;
+  }
+  100% {
+    margin-left: 0.2rem;
+  }
+}
+@keyframes labelOut {
+  0% {
+    margin-left: 0.2rem;
+  }
+  100% {
+    margin-left: 1.75rem;
+  }
+}
+@keyframes LabelIn {
+  0% {
+    margin-left: 2rem;
+  }
+  100% {
+    margin-left: 0.2rem;
+  }
+}
+@keyframes LabelOut {
+  0% {
+    margin-left: 0.2rem;
+  }
+  100% {
+    margin-left: 2rem;
+  }
 }
 
 /*# sourceMappingURL=login.css.map */
