--- a/MyProject/src/scss/login.scss
+++ b/MyProject/src/scss/login.scss
@@ -5,7 +5,6 @@
 }
 body{
   font-family: 'IBM Plex Sans', sans-serif;
-  //overflow: hidden;
   overflow-x: hidden;
   overflow-y: hidden;
   margin: 0;
@@ -41,6 +40,7 @@ body{
   &__gg{
     background-color: #DD4B39;
     border-radius: 0.2rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     display:flex;
     position: relative;
     &-link{
@@ -59,7 +59,7 @@ body{
         left: 0;
         transform: translateY(-50%);
         padding: 0.8rem;
-        border-right: 0.5px solid #475F7B;
+        border-right: 0.5px solid rgba(0,0,0,0.35);
       }
       &>span{
         padding-left: 0.5rem;
@@ -67,14 +67,13 @@ body{
     }
   }
   //---------------------------------
-  &__form{
-
-  }
   &__label{
-    font-size: .9rem;
+    font-size: .8rem;
+    margin-left: 1.75rem;
+    display: inline-block;
   }
   &__input{
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
   &__btn{
     position: relative;
@@ -82,7 +81,7 @@ body{
     background-color: #5A8DEE;
     color: #fff;
     border-radius: 0.2rem;
-    box-shadow: 0 2px 4px 0 rgba(90,141,238,.5);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     display: inline-block;
     transition: all 0.2s ease-in-out;
     &:hover{
@@ -99,7 +98,7 @@ body{
   }
   //---------------------------------
   &__signup{
-    border-top:0.2px solid #6c757d;
+    border-top:1px solid rgba(0,0,0,.15);
   }
   //---------------------------------
   &__right{
@@ -110,5 +109,79 @@ body{
     align-items: center;
     border-bottom-right-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
+  }
+}
+//---------------------------------
+.borderInput{
+  border:1px solid #007bff;
+  color:#007bff!important;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
+.paddingLabelIn{
+  animation-name: labelIn;
+  animation-duration: 0.5s;
+  margin-left:0.2rem;
+}
+.paddingLabelOut{
+  animation-name: labelOut;
+  animation-duration: 0.5s;
+  margin-left:1.75rem;
+}
+.paddingTextInputIn{
+  animation-name: textInputIn;
+  animation-duration: 0.2s;
+  padding-left:1.25rem;
+}
+.paddingTextInputOut{
+  animation-name: textInputIOut;
+  animation-duration: 0.2s;
+  padding-left:0.75rem;
+}
+@keyframes textInputIn {
+  0%{
+    padding-left: 0.75rem;
+  }
+  100%{
+    padding-left: 1.25rem;
+  }
+}
+@keyframes textInputIOut {
+  0%{
+    padding-left: 1.25rem;
+  }
+  100%{
+    padding-left: 0.75rem;
+  }
+}
+@keyframes labelIn {
+  0%{
+    margin-left: 1.75rem;
+  }
+  100%{
+    margin-left: 0.2rem;
+  }
+}
+@keyframes labelOut {
+  0%{
+    margin-left: 0.2rem;
+  }
+  100%{
+    margin-left: 1.75rem;
+  }
+}
+@keyframes LabelIn {
+  0%{
+    margin-left: 2rem;
+  }
+  100%{
+    margin-left: 0.2rem;
+  }
+}
+@keyframes LabelOut {
+  0%{
+    margin-left: 0.2rem;
+  }
+  100%{
+    margin-left: 2rem;
   }
 }
