--- a/MyProject/src/scss/register.scss
+++ b/MyProject/src/scss/register.scss
@@ -50,13 +50,15 @@ body{
   }
   &__btn{
     position: relative;
-    width: 100%;
     background-color: #5A8DEE;
     color: #fff;
     border-radius: 0.2rem;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     display: inline-block;
     transition: all 0.2s ease-in-out;
+    &-register{
+      width: 100%;
+    }
     &:hover{
       cursor: pointer;
       transform: translateY(-2px);
