--- a/MyProject/src/scss/login.scss
+++ b/MyProject/src/scss/login.scss
@@ -79,13 +79,15 @@ body{
   }
   &__btn{
     position: relative;
-    width: 100%;
     background-color: #5A8DEE;
     color: #fff;
     border-radius: 0.2rem;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     display: inline-block;
     transition: all 0.2s ease-in-out;
+    &-login{
+      width: 100%;
+    }
     &:hover{
       cursor: pointer;
       transform: translateY(-2px);
@@ -113,7 +115,7 @@ body{
     border-top-right-radius: 0.5rem;
   }
 }
-//---------------------------------
+//----------------------------------
 .borderInput{
   border:1px solid #007bff;
   color:#007bff!important;
