--- a/MyProject/src/scss/profile.scss
+++ b/MyProject/src/scss/profile.scss
@@ -9,6 +9,7 @@ body{
   font-weight: 400;
   line-height: 1.4;
   background-color: #F2F4F4;
+  height: 2000px;
 }
 .header{
   height: 400px;
@@ -25,13 +26,14 @@ body{
   }
   &__content{
     position: absolute;
-    top:-120px;
+    top:-150px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
   }
   &__image{
+    width: 300px;
     border-radius: 50%;
     border: 10px solid #fff;
   }
@@ -55,6 +57,20 @@ body{
   &__setting{
     display: flex;
     justify-content: space-between;
+  }
+  //----------------------------
+  &__image{
+    width: 100%;
+    background-color: #fff;
+    border-radius: 0.2rem;
+    &-details{
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-column-gap:0.5rem;
+      grid-row-gap:0.5rem;
+    }
   }
   //----------------------------
   &__right{
